# ovo

./: .gitignore  CMakeLists.txt  Makefile  README.md  action.yml  core.c  hak.rs  kkit.c  kkit.h  memory.c  memory.h  mmuhack.c  mmuhack.h  peekaboo.c
.github/workflows/: build-android13.yml  build-android14.yml  build-android15.yml  build-batch.yml  build_all_modules.yml  ci.yml  only-build-android14-5.15.yml
client-sdk/: hak.rs  hakutaku.cpp  hakutaku.h
ovo/: Makefile  core.c  kkit.c  kkit.h  memory.c  memory.h  mmuhack.c  peekaboo.c  server.c  server.h  touch.c  vma.c  vma.h
samples/: test_memory.cpp
samples/jni/: Android.mk  hakutaku.cpp  hakutaku.h
